# roadrash-cli

./: Cargo.toml
.github/workflows/: ci.yml
resources/: rsrc.bt  t0m50n_rsrc_extract.py
resources/scripts/: gho_rrdump.cpp  gho_rrload.cpp  t0m50n_rsrc_extract.py
src/: main.rs
src/actions/: extract_rsrc.rs  mod.rs
src/actions/anim/: mod.rs  unpack.rs
src/actions/dat/: mod.rs  pack.rs  unpack.rs
src/actions/fam/: mod.rs  unpack.rs
src/actions/rsrc/: mod.rs  unpack.rs
src/parsers/: anim.rs  dat.rs  fam.rs  mod.rs  palette.rs  rsrc.rs
