[package]
name = "roadrash-cli"
version = "0.1.0"
edition = "2018"
authors = ["amPerl"]
categories = []
description = "Road Rash (PC, 1994) files toolkit"
homepage = "https://github.com/amPerl/roadrash-cli"
repository = "https://github.com/amPerl/roadrash-cli"
license = "MIT"

[dependencies]
anyhow = "1.0.38"
binrw = "0.6.0"
clap = "3.0.0-beta.4"
image = { version = "0.23.14", features = ["bmp"] }